--- a/README
+++ b/README
@@ -1,17 +1,30 @@
+OGR2GUI 是一个开源项目，为 OGR2OGR 提供图形用户界面 （GUI）。OGR2OGR 是用于转换和操作地理空间数据的命令行实用程序。
+
+将原项目进行升级：
+
+1. 其在Qt5+GDAL3.7.2能够正常编译；
+2. 增加ogr2gui_zh.ts支持简体中文；
+
+![界面](.\images\界面.png)
+
+原项目地址：
+
+[ogr2gui download | SourceForge.net](https://sourceforge.net/projects/ogr2gui/)
+
 Copyright © 2009, Inventis
 
 
 This file is part of ogr2gui.
- 
+
 Ogr2gui is free software; you can redistribute it and/or modify
 it under the terms of version 3 of the GNU General Public License as published by
 the Free Software Foundation.
- 
+
 Ogr2gui is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
- 
+
 You should have received a copy of the GNU General Public License
 along with ogr2gui; if not, write to the Free Software
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
